<resources>
    <string name="app_name">VolleyRequest</string>
    <string name="txt_title">What would you like to make?</string>
    <string name="str_ingredient">Ingredient: eg tomato</string>
    <string name="str_search">Search Item: eg meat</string>
    <string name="str_go">Go</string>
    <string name="str_image_desc">Image of the Recipe</string>
    <string name="str_recipe_title">Recipe Title</string>
    <string name="str_ingredients">Ingredients</string>
</resources>