<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_300dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:cardElevation="@dimen/dimen_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_recipe"
                android:layout_width="@dimen/size_80dp"
                android:layout_height="@dimen/size_80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/size_15dp"
                android:layout_marginLeft="@dimen/size_15dp"
                android:layout_marginTop="@dimen/size_15dp"
                android:layout_marginBottom="@dimen/size_15dp"
                android:contentDescription="@string/str_image_desc"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_recipe"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/str_recipe_title"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:text="@string/str_ingredients"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/size_14sp" />

            <ImageView
                android:id="@+id/img_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@android:drawable/ic_menu_share" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>